--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# gitignore template for LTspice, taken from https://github.com/toptal/gitignore/blob/master/templates/LTspice.gitignore
+# website: https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html
+
+# Logfile
+*.log
+
+# Simulation Outputs
+*.raw
+*.fft
+
+# Netlist
+*.net
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
